fixed: timeShift.css| image pathway issue.

--- a/style/timeShift.css
+++ b/style/timeShift.css
@@ -8,7 +8,7 @@ font-family: 'Trebuchet', sans-serif;
 .title {
 height: 1536px;
 width: 1024px;
-background-image: url("images/time_shift_16.png");
+background-image: url("../images/time_shift_16.png");
 background-repeat: no-repeat;
 background-position: center;
 background-size: cover;
